k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: java-applications-svc
  namespace: pipe
spec:
  type: ClusterIP
  selector:
    app: java-maven-app
  ports:
    - port: 80
      targetPort: 8080
