k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  namespace: pipe
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: no.tesify.site
spec:
  ingressClassName: alb
  rules:
  - host: no.tesify.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-applications-svc
            port:
              number: 80
